adding missing changes to some tests